# travel-assistant-agent

./: README.md  backend_requirements.md  requirements.md  user_workflows.md
backend/: .gitignore  README.md  app.py  pyproject.toml  setup_agentops.md
backend/orchestrator/: models.py  query_generator.py  query_parser.py  travel_chat.py
backend/workers/: search_flights.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: chat-interface.tsx  search-results.tsx
