[tool.poetry]
name = "travel-assistant-backend"
version = "0.1.0"
description = ""
authors = ["AshwinHegde <oscii.ashwin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
nova-act = "^0.1.0"
playwright = "^1.40.0"
openai = "^1.3.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
sqlmodel = "^0.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
